main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.41.2.15936",
      "templateHash": "13329623927754758792"
    }
  },
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "centralus",
      "metadata": {
        "description": "Azure region for all resources."
      }
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "azureuser",
      "metadata": {
        "description": "Admin username for all VMs."
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Admin password for all VMs."
      }
    }
  },
  "variables": {
    "hubCidr": "10.0.0.0/23",
    "spoke01Cidr": "10.0.2.0/24",
    "spoke02Cidr": "10.0.3.0/24",
    "onpremCidr": "192.168.0.0/24",
    "hubDefaultSubnet": "10.0.0.0/26",
    "hubGwSubnet": "10.0.0.64/26",
    "hubFwSubnet": "10.0.0.128/26",
    "hubBastionSubnet": "10.0.0.192/26",
    "hubFwMgmtSubnet": "10.0.1.0/26",
    "spoke01Subnet": "10.0.2.0/24",
    "spoke02Subnet": "10.0.3.0/24",
    "onpremDefaultSubnet": "192.168.0.0/26",
    "onpremGwSubnet": "192.168.0.64/26",
    "onpremVmSubnet": "192.168.0.128/26",
    "vpnSharedKey": "VerySecureSharedKey123!",
    "ubuntuImage": {
      "publisher": "Canonical",
      "offer": "0001-com-ubuntu-server-jammy",
      "sku": "22_04-lts-gen2",
      "version": "latest"
    }
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-09-01",
      "name": "nsg-spoke01",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-SSH",
            "properties": {
              "priority": 1000,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "22"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-09-01",
      "name": "nsg-spoke02",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-SSH",
            "properties": {
              "priority": 1000,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "22"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-09-01",
      "name": "nsg-onprem",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-SSH",
            "properties": {
              "priority": 1000,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "22"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/routeTables",
      "apiVersion": "2023-09-01",
      "name": "rt-spoke01",
      "location": "[parameters('location')]",
      "properties": {
        "disableBgpRoutePropagation": true
      }
    },
    {
      "type": "Microsoft.Network/routeTables",
      "apiVersion": "2023-09-01",
      "name": "rt-spoke02",
      "location": "[parameters('location')]",
      "properties": {
        "disableBgpRoutePropagation": true
      }
    },
    {
      "type": "Microsoft.Network/routeTables",
      "apiVersion": "2023-09-01",
      "name": "rt-fw-mgmt",
      "location": "[parameters('location')]",
      "properties": {
        "disableBgpRoutePropagation": true,
        "routes": [
          {
            "name": "mgmt-to-internet",
            "properties": {
              "addressPrefix": "0.0.0.0/0",
              "nextHopType": "Internet"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-09-01",
      "name": "Hub01",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('hubCidr')]"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "properties": {
              "addressPrefix": "[variables('hubDefaultSubnet')]"
            }
          },
          {
            "name": "GatewaySubnet",
            "properties": {
              "addressPrefix": "[variables('hubGwSubnet')]"
            }
          },
          {
            "name": "AzureFirewallSubnet",
            "properties": {
              "addressPrefix": "[variables('hubFwSubnet')]"
            }
          },
          {
            "name": "AzureBastionSubnet",
            "properties": {
              "addressPrefix": "[variables('hubBastionSubnet')]"
            }
          },
          {
            "name": "AzureFirewallManagementSubnet",
            "properties": {
              "addressPrefix": "[variables('hubFwMgmtSubnet')]",
              "routeTable": {
                "id": "[resourceId('Microsoft.Network/routeTables', 'rt-fw-mgmt')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/routeTables', 'rt-fw-mgmt')]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-09-01",
      "name": "Spoke01",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('spoke01Cidr')]"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "properties": {
              "addressPrefix": "[variables('spoke01Subnet')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-spoke01')]"
              },
              "routeTable": {
                "id": "[resourceId('Microsoft.Network/routeTables', 'rt-spoke01')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-spoke01')]",
        "[resourceId('Microsoft.Network/routeTables', 'rt-spoke01')]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-09-01",
      "name": "Spoke02",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('spoke02Cidr')]"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "properties": {
              "addressPrefix": "[variables('spoke02Subnet')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-spoke02')]"
              },
              "routeTable": {
                "id": "[resourceId('Microsoft.Network/routeTables', 'rt-spoke02')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-spoke02')]",
        "[resourceId('Microsoft.Network/routeTables', 'rt-spoke02')]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-09-01",
      "name": "OnPrem01",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('onpremCidr')]"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "properties": {
              "addressPrefix": "[variables('onpremDefaultSubnet')]"
            }
          },
          {
            "name": "GatewaySubnet",
            "properties": {
              "addressPrefix": "[variables('onpremGwSubnet')]"
            }
          },
          {
            "name": "vm-subnet",
            "properties": {
              "addressPrefix": "[variables('onpremVmSubnet')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-onprem')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-onprem')]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "apiVersion": "2023-09-01",
      "name": "[format('{0}/{1}', 'Hub01', 'hub-to-spoke01')]",
      "properties": {
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', 'Spoke01')]"
        },
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": false,
        "useRemoteGateways": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', 'Hub01')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'Spoke01')]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "apiVersion": "2023-09-01",
      "name": "[format('{0}/{1}', 'Spoke01', 'spoke01-to-hub')]",
      "properties": {
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', 'Hub01')]"
        },
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": false,
        "useRemoteGateways": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', 'Hub01')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'Spoke01')]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "apiVersion": "2023-09-01",
      "name": "[format('{0}/{1}', 'Hub01', 'hub-to-spoke02')]",
      "properties": {
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', 'Spoke02')]"
        },
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": false,
        "useRemoteGateways": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', 'Hub01')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'Spoke02')]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "apiVersion": "2023-09-01",
      "name": "[format('{0}/{1}', 'Spoke02', 'spoke02-to-hub')]",
      "properties": {
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', 'Hub01')]"
        },
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": false,
        "useRemoteGateways": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', 'Hub01')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'Spoke02')]"
      ]
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-09-01",
      "name": "pip-vng-hub01-1",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "zones": [
        "1",
        "2",
        "3"
      ],
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-09-01",
      "name": "pip-vng-hub01-2",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "zones": [
        "1",
        "2",
        "3"
      ],
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-09-01",
      "name": "pip-azure-firewall",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-09-01",
      "name": "pip-azure-firewall-mgmt",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-09-01",
      "name": "pip-azure-bastion",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-09-01",
      "name": "pip-vng-onprem01-1",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "zones": [
        "1",
        "2",
        "3"
      ],
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-09-01",
      "name": "pip-vng-onprem01-2",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "zones": [
        "1",
        "2",
        "3"
      ],
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworkGateways",
      "apiVersion": "2023-09-01",
      "name": "vng-hub01",
      "location": "[parameters('location')]",
      "properties": {
        "gatewayType": "Vpn",
        "vpnType": "RouteBased",
        "sku": {
          "name": "VpnGw1AZ",
          "tier": "VpnGw1AZ"
        },
        "activeActive": true,
        "enableBgp": true,
        "bgpSettings": {
          "asn": 65509
        },
        "ipConfigurations": [
          {
            "name": "gwIpConfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[format('{0}/subnets/GatewaySubnet', resourceId('Microsoft.Network/virtualNetworks', 'Hub01'))]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-hub01-1')]"
              }
            }
          },
          {
            "name": "gwIpConfig2",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[format('{0}/subnets/GatewaySubnet', resourceId('Microsoft.Network/virtualNetworks', 'Hub01'))]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-hub01-2')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-hub01-1')]",
        "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-hub01-2')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'Hub01')]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworkGateways",
      "apiVersion": "2023-09-01",
      "name": "vng-onprem01",
      "location": "[parameters('location')]",
      "properties": {
        "gatewayType": "Vpn",
        "vpnType": "RouteBased",
        "sku": {
          "name": "VpnGw1AZ",
          "tier": "VpnGw1AZ"
        },
        "activeActive": true,
        "enableBgp": true,
        "bgpSettings": {
          "asn": 65510
        },
        "ipConfigurations": [
          {
            "name": "gwIpConfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[format('{0}/subnets/GatewaySubnet', resourceId('Microsoft.Network/virtualNetworks', 'OnPrem01'))]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-onprem01-1')]"
              }
            }
          },
          {
            "name": "gwIpConfig2",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[format('{0}/subnets/GatewaySubnet', resourceId('Microsoft.Network/virtualNetworks', 'OnPrem01'))]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-onprem01-2')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-onprem01-1')]",
        "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-onprem01-2')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'OnPrem01')]"
      ]
    },
    {
      "type": "Microsoft.Network/firewallPolicies",
      "apiVersion": "2023-09-01",
      "name": "fw-policy-hub01",
      "location": "[parameters('location')]",
      "properties": {
        "sku": {
          "tier": "Premium"
        }
      }
    },
    {
      "type": "Microsoft.Network/firewallPolicies/ruleCollectionGroups",
      "apiVersion": "2023-09-01",
      "name": "[format('{0}/{1}', 'fw-policy-hub01', 'DefaultRuleCollectionGroup')]",
      "properties": {
        "priority": 200,
        "ruleCollections": [
          {
            "ruleCollectionType": "FirewallPolicyFilterRuleCollection",
            "name": "NetworkRules",
            "priority": 100,
            "action": {
              "type": "Allow"
            },
            "rules": [
              {
                "ruleType": "NetworkRule",
                "name": "Allow-DNS",
                "description": "Allow DNS from spokes and onprem to Azure DNS",
                "sourceAddresses": [
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "192.168.0.0/24"
                ],
                "destinationAddresses": [
                  "168.63.129.16"
                ],
                "destinationPorts": [
                  "53"
                ],
                "ipProtocols": [
                  "UDP",
                  "TCP"
                ]
              },
              {
                "ruleType": "NetworkRule",
                "name": "Allow-NTP",
                "description": "Allow NTP outbound from all internal networks",
                "sourceAddresses": [
                  "10.0.0.0/23",
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "192.168.0.0/24"
                ],
                "destinationAddresses": [
                  "*"
                ],
                "destinationPorts": [
                  "123"
                ],
                "ipProtocols": [
                  "UDP"
                ]
              },
              {
                "ruleType": "NetworkRule",
                "name": "Allow-Spoke-to-Spoke",
                "description": "Allow traffic between Spoke01 and Spoke02 via firewall",
                "sourceAddresses": [
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "destinationAddresses": [
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "destinationPorts": [
                  "*"
                ],
                "ipProtocols": [
                  "Any"
                ]
              },
              {
                "ruleType": "NetworkRule",
                "name": "Allow-OnPrem-RDP",
                "description": "Allow RDP from onprem to spoke VMs",
                "sourceAddresses": [
                  "192.168.0.0/24"
                ],
                "destinationAddresses": [
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "destinationPorts": [
                  "3389"
                ],
                "ipProtocols": [
                  "TCP"
                ]
              },
              {
                "ruleType": "NetworkRule",
                "name": "Allow-OnPrem-SSH",
                "description": "Allow SSH from onprem to spoke VMs",
                "sourceAddresses": [
                  "192.168.0.0/24"
                ],
                "destinationAddresses": [
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "destinationPorts": [
                  "22"
                ],
                "ipProtocols": [
                  "TCP"
                ]
              },
              {
                "ruleType": "NetworkRule",
                "name": "Allow-Spoke-to-OnPrem",
                "description": "Allow traffic from spokes to onprem network",
                "sourceAddresses": [
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "destinationAddresses": [
                  "192.168.0.0/24"
                ],
                "destinationPorts": [
                  "*"
                ],
                "ipProtocols": [
                  "Any"
                ]
              }
            ]
          },
          {
            "ruleCollectionType": "FirewallPolicyFilterRuleCollection",
            "name": "ApplicationRules",
            "priority": 200,
            "action": {
              "type": "Allow"
            },
            "rules": [
              {
                "ruleType": "ApplicationRule",
                "name": "Allow-WindowsUpdate",
                "description": "Allow Windows Update endpoints",
                "sourceAddresses": [
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "192.168.0.0/24"
                ],
                "protocols": [
                  {
                    "protocolType": "Https",
                    "port": 443
                  },
                  {
                    "protocolType": "Http",
                    "port": 80
                  }
                ],
                "fqdnTags": [
                  "WindowsUpdate"
                ]
              },
              {
                "ruleType": "ApplicationRule",
                "name": "Allow-MicrosoftServices",
                "description": "Allow Microsoft update and telemetry FQDNs",
                "sourceAddresses": [
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "192.168.0.0/24"
                ],
                "protocols": [
                  {
                    "protocolType": "Https",
                    "port": 443
                  }
                ],
                "targetFqdns": [
                  "*.microsoft.com",
                  "*.azure.com",
                  "*.windowsazure.com",
                  "*.msftncsi.com"
                ]
              },
              {
                "ruleType": "ApplicationRule",
                "name": "Allow-UbuntuAptRepos",
                "description": "Allow Ubuntu package manager repositories",
                "sourceAddresses": [
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "192.168.0.0/24"
                ],
                "protocols": [
                  {
                    "protocolType": "Https",
                    "port": 443
                  },
                  {
                    "protocolType": "Http",
                    "port": 80
                  }
                ],
                "targetFqdns": [
                  "*.ubuntu.com",
                  "*.launchpad.net",
                  "security.ubuntu.com",
                  "archive.ubuntu.com"
                ]
              },
              {
                "ruleType": "ApplicationRule",
                "name": "Allow-AzurePortal",
                "description": "Allow Azure portal and management plane access",
                "sourceAddresses": [
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "192.168.0.0/24"
                ],
                "protocols": [
                  {
                    "protocolType": "Https",
                    "port": 443
                  }
                ],
                "targetFqdns": [
                  "portal.azure.com",
                  "management.azure.com",
                  "login.microsoftonline.com"
                ]
              }
            ]
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/firewallPolicies', 'fw-policy-hub01')]"
      ]
    },
    {
      "type": "Microsoft.Network/azureFirewalls",
      "apiVersion": "2023-09-01",
      "name": "fw-hub01",
      "location": "[parameters('location')]",
      "properties": {
        "sku": {
          "name": "AZFW_VNet",
          "tier": "Premium"
        },
        "firewallPolicy": {
          "id": "[resourceId('Microsoft.Network/firewallPolicies', 'fw-policy-hub01')]"
        },
        "ipConfigurations": [
          {
            "name": "FW-config",
            "properties": {
              "subnet": {
                "id": "[format('{0}/subnets/AzureFirewallSubnet', resourceId('Microsoft.Network/virtualNetworks', 'Hub01'))]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-azure-firewall')]"
              }
            }
          }
        ],
        "managementIpConfiguration": {
          "name": "FW-mgmt-config",
          "properties": {
            "subnet": {
              "id": "[format('{0}/subnets/AzureFirewallManagementSubnet', resourceId('Microsoft.Network/virtualNetworks', 'Hub01'))]"
            },
            "publicIPAddress": {
              "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-azure-firewall-mgmt')]"
            }
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-azure-firewall-mgmt')]",
        "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-azure-firewall')]",
        "[resourceId('Microsoft.Network/firewallPolicies', 'fw-policy-hub01')]",
        "[resourceId('Microsoft.Network/firewallPolicies/ruleCollectionGroups', 'fw-policy-hub01', 'DefaultRuleCollectionGroup')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'Hub01')]"
      ]
    },
    {
      "type": "Microsoft.Network/bastionHosts",
      "apiVersion": "2023-09-01",
      "name": "bastion-hub01",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "IpConf",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[format('{0}/subnets/AzureBastionSubnet', resourceId('Microsoft.Network/virtualNetworks', 'Hub01'))]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-azure-bastion')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-azure-bastion')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'Hub01')]"
      ]
    },
    {
      "type": "Microsoft.Network/routeTables/routes",
      "apiVersion": "2023-09-01",
      "name": "[format('{0}/{1}', 'rt-spoke01', 'default-to-firewall')]",
      "properties": {
        "addressPrefix": "0.0.0.0/0",
        "nextHopType": "VirtualAppliance",
        "nextHopIpAddress": "[reference(resourceId('Microsoft.Network/azureFirewalls', 'fw-hub01'), '2023-09-01').ipConfigurations[0].properties.privateIPAddress]"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/azureFirewalls', 'fw-hub01')]",
        "[resourceId('Microsoft.Network/routeTables', 'rt-spoke01')]"
      ]
    },
    {
      "type": "Microsoft.Network/routeTables/routes",
      "apiVersion": "2023-09-01",
      "name": "[format('{0}/{1}', 'rt-spoke02', 'default-to-firewall')]",
      "properties": {
        "addressPrefix": "0.0.0.0/0",
        "nextHopType": "VirtualAppliance",
        "nextHopIpAddress": "[reference(resourceId('Microsoft.Network/azureFirewalls', 'fw-hub01'), '2023-09-01').ipConfigurations[0].properties.privateIPAddress]"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/azureFirewalls', 'fw-hub01')]",
        "[resourceId('Microsoft.Network/routeTables', 'rt-spoke02')]"
      ]
    },
    {
      "type": "Microsoft.Network/localNetworkGateways",
      "apiVersion": "2023-09-01",
      "name": "lng-onprem-instance1",
      "location": "[parameters('location')]",
      "properties": {
        "gatewayIpAddress": "[reference(resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-onprem01-1'), '2023-09-01').ipAddress]",
        "localNetworkAddressSpace": {
          "addressPrefixes": [
            "192.168.0.0/24"
          ]
        },
        "bgpSettings": {
          "asn": 65510,
          "bgpPeeringAddress": "[reference(resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-onprem01'), '2023-09-01').bgpSettings.bgpPeeringAddresses[0].defaultBgpIpAddresses[0]]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-onprem01-1')]",
        "[resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-onprem01')]"
      ]
    },
    {
      "type": "Microsoft.Network/localNetworkGateways",
      "apiVersion": "2023-09-01",
      "name": "lng-onprem-instance2",
      "location": "[parameters('location')]",
      "properties": {
        "gatewayIpAddress": "[reference(resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-onprem01-2'), '2023-09-01').ipAddress]",
        "localNetworkAddressSpace": {
          "addressPrefixes": [
            "192.168.0.0/24"
          ]
        },
        "bgpSettings": {
          "asn": 65510,
          "bgpPeeringAddress": "[reference(resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-onprem01'), '2023-09-01').bgpSettings.bgpPeeringAddresses[1].defaultBgpIpAddresses[0]]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-onprem01-2')]",
        "[resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-onprem01')]"
      ]
    },
    {
      "type": "Microsoft.Network/localNetworkGateways",
      "apiVersion": "2023-09-01",
      "name": "lng-hub-instance1",
      "location": "[parameters('location')]",
      "properties": {
        "gatewayIpAddress": "[reference(resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-hub01-1'), '2023-09-01').ipAddress]",
        "localNetworkAddressSpace": {
          "addressPrefixes": [
            "10.0.0.0/16"
          ]
        },
        "bgpSettings": {
          "asn": 65509,
          "bgpPeeringAddress": "[reference(resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-hub01'), '2023-09-01').bgpSettings.bgpPeeringAddresses[0].defaultBgpIpAddresses[0]]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-hub01-1')]",
        "[resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-hub01')]"
      ]
    },
    {
      "type": "Microsoft.Network/localNetworkGateways",
      "apiVersion": "2023-09-01",
      "name": "lng-hub-instance2",
      "location": "[parameters('location')]",
      "properties": {
        "gatewayIpAddress": "[reference(resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-hub01-2'), '2023-09-01').ipAddress]",
        "localNetworkAddressSpace": {
          "addressPrefixes": [
            "10.0.0.0/16"
          ]
        },
        "bgpSettings": {
          "asn": 65509,
          "bgpPeeringAddress": "[reference(resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-hub01'), '2023-09-01').bgpSettings.bgpPeeringAddresses[1].defaultBgpIpAddresses[0]]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-hub01-2')]",
        "[resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-hub01')]"
      ]
    },
    {
      "type": "Microsoft.Network/connections",
      "apiVersion": "2023-09-01",
      "name": "hub-to-onprem-instance1",
      "location": "[parameters('location')]",
      "properties": {
        "connectionType": "IPsec",
        "virtualNetworkGateway1": {
          "id": "[resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-hub01')]",
          "properties": {}
        },
        "localNetworkGateway2": {
          "id": "[resourceId('Microsoft.Network/localNetworkGateways', 'lng-onprem-instance1')]",
          "properties": {}
        },
        "enableBgp": true,
        "sharedKey": "[variables('vpnSharedKey')]"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-hub01')]",
        "[resourceId('Microsoft.Network/localNetworkGateways', 'lng-onprem-instance1')]"
      ]
    },
    {
      "type": "Microsoft.Network/connections",
      "apiVersion": "2023-09-01",
      "name": "hub-to-onprem-instance2",
      "location": "[parameters('location')]",
      "properties": {
        "connectionType": "IPsec",
        "virtualNetworkGateway1": {
          "id": "[resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-hub01')]",
          "properties": {}
        },
        "localNetworkGateway2": {
          "id": "[resourceId('Microsoft.Network/localNetworkGateways', 'lng-onprem-instance2')]",
          "properties": {}
        },
        "enableBgp": true,
        "sharedKey": "[variables('vpnSharedKey')]"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-hub01')]",
        "[resourceId('Microsoft.Network/localNetworkGateways', 'lng-onprem-instance2')]"
      ]
    },
    {
      "type": "Microsoft.Network/connections",
      "apiVersion": "2023-09-01",
      "name": "onprem-to-hub-instance1",
      "location": "[parameters('location')]",
      "properties": {
        "connectionType": "IPsec",
        "virtualNetworkGateway1": {
          "id": "[resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-onprem01')]",
          "properties": {}
        },
        "localNetworkGateway2": {
          "id": "[resourceId('Microsoft.Network/localNetworkGateways', 'lng-hub-instance1')]",
          "properties": {}
        },
        "enableBgp": true,
        "sharedKey": "[variables('vpnSharedKey')]"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/localNetworkGateways', 'lng-hub-instance1')]",
        "[resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-onprem01')]"
      ]
    },
    {
      "type": "Microsoft.Network/connections",
      "apiVersion": "2023-09-01",
      "name": "onprem-to-hub-instance2",
      "location": "[parameters('location')]",
      "properties": {
        "connectionType": "IPsec",
        "virtualNetworkGateway1": {
          "id": "[resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-onprem01')]",
          "properties": {}
        },
        "localNetworkGateway2": {
          "id": "[resourceId('Microsoft.Network/localNetworkGateways', 'lng-hub-instance2')]",
          "properties": {}
        },
        "enableBgp": true,
        "sharedKey": "[variables('vpnSharedKey')]"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/localNetworkGateways', 'lng-hub-instance2')]",
        "[resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-onprem01')]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2023-09-01",
      "name": "nic-vm-spk01-01",
      "location": "[parameters('location')]",
      "properties": {
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-spoke01')]"
        },
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[format('{0}/subnets/default', resourceId('Microsoft.Network/virtualNetworks', 'Spoke01'))]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-spoke01')]",
        "[resourceId('Microsoft.Network/routeTables/routes', 'rt-spoke01', 'default-to-firewall')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'Spoke01')]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2023-09-01",
      "name": "nic-vm-spk02-01",
      "location": "[parameters('location')]",
      "properties": {
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-spoke02')]"
        },
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[format('{0}/subnets/default', resourceId('Microsoft.Network/virtualNetworks', 'Spoke02'))]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-spoke02')]",
        "[resourceId('Microsoft.Network/routeTables/routes', 'rt-spoke02', 'default-to-firewall')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'Spoke02')]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2023-09-01",
      "name": "nic-vm-onprem-01",
      "location": "[parameters('location')]",
      "properties": {
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-onprem')]"
        },
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[format('{0}/subnets/vm-subnet', resourceId('Microsoft.Network/virtualNetworks', 'OnPrem01'))]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-onprem')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'OnPrem01')]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2023-09-01",
      "name": "vm-spk01-01",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_B1s"
        },
        "osProfile": {
          "computerName": "vm-spk01-01",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false
          }
        },
        "storageProfile": {
          "imageReference": "[variables('ubuntuImage')]",
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Standard_LRS"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', 'nic-vm-spk01-01')]"
            }
          ]
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', 'nic-vm-spk01-01')]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2023-09-01",
      "name": "vm-spk02-01",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_B1s"
        },
        "osProfile": {
          "computerName": "vm-spk02-01",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false
          }
        },
        "storageProfile": {
          "imageReference": "[variables('ubuntuImage')]",
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Standard_LRS"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', 'nic-vm-spk02-01')]"
            }
          ]
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', 'nic-vm-spk02-01')]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2023-09-01",
      "name": "vm-onprem-01",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_B1s"
        },
        "osProfile": {
          "computerName": "vm-onprem-01",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false
          }
        },
        "storageProfile": {
          "imageReference": "[variables('ubuntuImage')]",
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Standard_LRS"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', 'nic-vm-onprem-01')]"
            }
          ]
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', 'nic-vm-onprem-01')]"
      ]
    },
    {
      "type": "Microsoft.OperationalInsights/workspaces",
      "apiVersion": "2023-09-01",
      "name": "log-hub-spoke-fw-mgmt",
      "location": "[parameters('location')]",
      "properties": {
        "sku": {
          "name": "PerGB2018"
        },
        "retentionInDays": 30
      }
    },
    {
      "type": "Microsoft.Insights/diagnosticSettings",
      "apiVersion": "2021-05-01-preview",
      "scope": "[resourceId('Microsoft.Network/azureFirewalls', 'fw-hub01')]",
      "name": "diag-fw-hub01",
      "properties": {
        "workspaceId": "[resourceId('Microsoft.OperationalInsights/workspaces', 'log-hub-spoke-fw-mgmt')]",
        "logAnalyticsDestinationType": "Dedicated",
        "logs": [
          {
            "category": "AZFWApplicationRule",
            "enabled": true
          },
          {
            "category": "AZFWNetworkRule",
            "enabled": true
          },
          {
            "category": "AZFWNatRule",
            "enabled": true
          },
          {
            "category": "AZFWThreatIntel",
            "enabled": true
          },
          {
            "category": "AZFWIdpsSignature",
            "enabled": true
          },
          {
            "category": "AZFWDnsQuery",
            "enabled": true
          },
          {
            "category": "AZFWFqdnResolveFailure",
            "enabled": true
          },
          {
            "category": "AZFWApplicationRuleAggregation",
            "enabled": true
          },
          {
            "category": "AZFWNetworkRuleAggregation",
            "enabled": true
          },
          {
            "category": "AZFWNatRuleAggregation",
            "enabled": true
          }
        ],
        "metrics": [
          {
            "category": "AllMetrics",
            "enabled": true
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/azureFirewalls', 'fw-hub01')]",
        "[resourceId('Microsoft.OperationalInsights/workspaces', 'log-hub-spoke-fw-mgmt')]"
      ]
    },
    {
      "type": "Microsoft.Insights/diagnosticSettings",
      "apiVersion": "2021-05-01-preview",
      "scope": "[resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-hub01')]",
      "name": "diag-vng-hub01",
      "properties": {
        "workspaceId": "[resourceId('Microsoft.OperationalInsights/workspaces', 'log-hub-spoke-fw-mgmt')]",
        "logAnalyticsDestinationType": "Dedicated",
        "logs": [
          {
            "category": "GatewayDiagnosticLog",
            "enabled": true
          },
          {
            "category": "TunnelDiagnosticLog",
            "enabled": true
          },
          {
            "category": "RouteDiagnosticLog",
            "enabled": true
          },
          {
            "category": "IKEDiagnosticLog",
            "enabled": true
          }
        ],
        "metrics": [
          {
            "category": "AllMetrics",
            "enabled": true
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-hub01')]",
        "[resourceId('Microsoft.OperationalInsights/workspaces', 'log-hub-spoke-fw-mgmt')]"
      ]
    },
    {
      "type": "Microsoft.Insights/diagnosticSettings",
      "apiVersion": "2021-05-01-preview",
      "scope": "[resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-onprem01')]",
      "name": "diag-vng-onprem01",
      "properties": {
        "workspaceId": "[resourceId('Microsoft.OperationalInsights/workspaces', 'log-hub-spoke-fw-mgmt')]",
        "logAnalyticsDestinationType": "Dedicated",
        "logs": [
          {
            "category": "GatewayDiagnosticLog",
            "enabled": true
          },
          {
            "category": "TunnelDiagnosticLog",
            "enabled": true
          },
          {
            "category": "RouteDiagnosticLog",
            "enabled": true
          },
          {
            "category": "IKEDiagnosticLog",
            "enabled": true
          }
        ],
        "metrics": [
          {
            "category": "AllMetrics",
            "enabled": true
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.OperationalInsights/workspaces', 'log-hub-spoke-fw-mgmt')]",
        "[resourceId('Microsoft.Network/virtualNetworkGateways', 'vng-onprem01')]"
      ]
    },
    {
      "type": "Microsoft.Insights/diagnosticSettings",
      "apiVersion": "2021-05-01-preview",
      "scope": "[resourceId('Microsoft.Network/bastionHosts', 'bastion-hub01')]",
      "name": "diag-bastion-hub01",
      "properties": {
        "workspaceId": "[resourceId('Microsoft.OperationalInsights/workspaces', 'log-hub-spoke-fw-mgmt')]",
        "logAnalyticsDestinationType": "Dedicated",
        "logs": [
          {
            "category": "BastionAuditLogs",
            "enabled": true
          }
        ],
        "metrics": [
          {
            "category": "AllMetrics",
            "enabled": true
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/bastionHosts', 'bastion-hub01')]",
        "[resourceId('Microsoft.OperationalInsights/workspaces', 'log-hub-spoke-fw-mgmt')]"
      ]
    },
    {
      "type": "Microsoft.Insights/diagnosticSettings",
      "apiVersion": "2021-05-01-preview",
      "scope": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-spoke01')]",
      "name": "diag-nsg-spoke01",
      "properties": {
        "workspaceId": "[resourceId('Microsoft.OperationalInsights/workspaces', 'log-hub-spoke-fw-mgmt')]",
        "logAnalyticsDestinationType": "Dedicated",
        "logs": [
          {
            "category": "NetworkSecurityGroupEvent",
            "enabled": true
          },
          {
            "category": "NetworkSecurityGroupRuleCounter",
            "enabled": true
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.OperationalInsights/workspaces', 'log-hub-spoke-fw-mgmt')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-spoke01')]"
      ]
    },
    {
      "type": "Microsoft.Insights/diagnosticSettings",
      "apiVersion": "2021-05-01-preview",
      "scope": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-spoke02')]",
      "name": "diag-nsg-spoke02",
      "properties": {
        "workspaceId": "[resourceId('Microsoft.OperationalInsights/workspaces', 'log-hub-spoke-fw-mgmt')]",
        "logAnalyticsDestinationType": "Dedicated",
        "logs": [
          {
            "category": "NetworkSecurityGroupEvent",
            "enabled": true
          },
          {
            "category": "NetworkSecurityGroupRuleCounter",
            "enabled": true
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.OperationalInsights/workspaces', 'log-hub-spoke-fw-mgmt')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-spoke02')]"
      ]
    },
    {
      "type": "Microsoft.Insights/diagnosticSettings",
      "apiVersion": "2021-05-01-preview",
      "scope": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-onprem')]",
      "name": "diag-nsg-onprem",
      "properties": {
        "workspaceId": "[resourceId('Microsoft.OperationalInsights/workspaces', 'log-hub-spoke-fw-mgmt')]",
        "logAnalyticsDestinationType": "Dedicated",
        "logs": [
          {
            "category": "NetworkSecurityGroupEvent",
            "enabled": true
          },
          {
            "category": "NetworkSecurityGroupRuleCounter",
            "enabled": true
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.OperationalInsights/workspaces', 'log-hub-spoke-fw-mgmt')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-onprem')]"
      ]
    }
  ],
  "outputs": {
    "firewallPrivateIp": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/azureFirewalls', 'fw-hub01'), '2023-09-01').ipConfigurations[0].properties.privateIPAddress]"
    },
    "firewallMgmtPublicIp": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', 'pip-azure-firewall-mgmt'), '2023-09-01').ipAddress]"
    },
    "hubGwPip1": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-hub01-1'), '2023-09-01').ipAddress]"
    },
    "hubGwPip2": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-hub01-2'), '2023-09-01').ipAddress]"
    },
    "onpremGwPip1": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-onprem01-1'), '2023-09-01').ipAddress]"
    },
    "onpremGwPip2": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', 'pip-vng-onprem01-2'), '2023-09-01').ipAddress]"
    },
    "bastionPublicIp": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', 'pip-azure-bastion'), '2023-09-01').ipAddress]"
    },
    "logAnalyticsWorkspaceId": {
      "type": "string",
      "value": "[resourceId('Microsoft.OperationalInsights/workspaces', 'log-hub-spoke-fw-mgmt')]"
    }
  }
}
